Add liked movies html page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1 id="appTitle">🍿Film Finder🍿</h1>
+      <h1>🍿Film Finder🍿</h1>
     </header>
     <form id="genreForm">
       <label>Choose a genre:</label>
@@ -32,7 +32,9 @@
         <option value="365">Last year</option>
       </select>
     </form>
+
     <button id="playBtn">Let's Play!</button>
+
     <div id="movieInfo">
       <div id="moviePoster"></div>
       <div id="movieText"></div>
@@ -41,5 +43,7 @@
       <button id="likeBtn"><i class="fa-solid fa-thumbs-up"></i></button>
       <button id="dislikeBtn"><i class="fa-solid fa-thumbs-down"></i></button>
     </div>
+    <!-- Liked Movies link -->
+    <a href="liked-movies.html">❤️ View Liked Movies</a>
   </body>
 </html>
